Arrumado erro onde botão de pagamento aparecia na hora de atualizar os dados de um animal

--- a/app/src/main/res/layout/activity_pet_register.xml
+++ b/app/src/main/res/layout/activity_pet_register.xml
@@ -141,7 +141,8 @@
                 android:background="@drawable/loginbuttonshape"
                 android:onClick="onBuyPressed"
                 android:layout_above="@+id/register"
-                android:layout_centerHorizontal="true" />
+                android:layout_centerHorizontal="true"
+                android:visibility="gone" />
 
         </RelativeLayout>
 
