--- a/app/src/main/res/layout/activity_pet_data.xml
+++ b/app/src/main/res/layout/activity_pet_data.xml
@@ -84,7 +84,7 @@
                 android:layout_alignStart="@+id/textOwnerEmail" />
 
             <TextView
-                android:text="Pet Informations"
+                android:text="Informações do Pet"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView3"
@@ -96,7 +96,7 @@
                 android:textAllCaps="false" />
 
             <TextView
-                android:text="Owner Informations"
+                android:text="Informações do Dono"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textDadosDono"
@@ -118,7 +118,7 @@
                 android:textStyle="normal|bold" />
 
             <TextView
-                android:text="Name:"
+                android:text="Nome:"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/labelOwnerName"
@@ -129,7 +129,7 @@
                 android:textStyle="normal|bold" />
 
             <TextView
-                android:text="Phone:"
+                android:text="Telefone:"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/labelOwnerPhone"
@@ -142,7 +142,7 @@
                 android:textStyle="normal|bold" />
 
             <TextView
-                android:text="Sex:"
+                android:text="Sexo:"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/labelPetSex"
@@ -162,7 +162,7 @@
                 android:layout_centerHorizontal="true" />
 
             <TextView
-                android:text="Specie:"
+                android:text="Espécie:"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/labelPetSpecie"
@@ -173,7 +173,7 @@
                 android:layout_alignStart="@+id/labelPetSex" />
 
             <TextView
-                android:text="Name:"
+                android:text="Nome:"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/labelPetName"
