--- a/app/src/main/res/layout/activity_pet_register.xml
+++ b/app/src/main/res/layout/activity_pet_register.xml
@@ -132,7 +132,7 @@
                 android:layout_alignParentStart="true" />
 
             <Button
-                android:text="Pay with Paypal"
+                android:text="Pagar com Paypal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
