--- a/app/src/main/res/layout-sw410dp/activity_pet_vault.xml
+++ b/app/src/main/res/layout-sw410dp/activity_pet_vault.xml
@@ -28,7 +28,7 @@
         android:text="Seus Pets:"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:textSize="70px"
         android:id="@+id/textRegistration"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
